--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div class="top">
-    <h1>Yym-韩国代购</h1>
+    <a href="#"><h1>Yym-韩国代购</h1></a>
 </div>
 <div class="cb"></div>
 <div class="wrap">
@@ -68,9 +68,18 @@
 <div class="cb24"></div>
 <div class="footer">
     <ul>
-        <li class="MyWechat"><a href="javascript:">了解详情</a></li>
-        <li class="MyWechat"><a href="javascript:">我的微信</a></li>
-        <li><a href="http://www.miyacbg.com">返回首页</a></li>
+        <li class="MyWechat"><a href="javascript:void(0)">
+            <img src="images/icon11.png" alt="">
+            <p>查看详情</p>
+        </a></li>
+        <li class="MyWechat"><a href="javascript:void(0)">
+            <img src="images/icon21.png" alt="">
+            <p>代购微信</p>
+        </a></li>
+        <li><a href="http://www.miyacbg.com">
+            <img src="images/icon31.png" alt="">
+            <p>回到首页</p>
+        </a></li>
     </ul>
 </div>
 <div class="tcbg2"></div>
